banner is added

--- a/baice.html
+++ b/baice.html
@@ -19,5 +19,11 @@
       </ul>
     </nav>
   </header>
+
+  <section class="banner">
+      <h2>Heading 2</h2>
+      <img src="parties.png" />
+      <span class="caption"></span>
+  </section>
 </body>
 </html>
